docs/upbound-provider-aws/1.6/s3/v1beta1/bucketNotification.md
---
permalink: /upbound-provider-aws/1.6/s3/v1beta1/bucketNotification/
---

# s3.v1beta1.bucketNotification

"BucketNotification is the Schema for the BucketNotifications API. Manages a S3 Bucket Notification Configuration"

## Index

* [`fn new(name)`](#fn-new)
* [`obj metadata`](#obj-metadata)
  * [`fn withAnnotations(annotations)`](#fn-metadatawithannotations)
  * [`fn withAnnotationsMixin(annotations)`](#fn-metadatawithannotationsmixin)
  * [`fn withClusterName(clusterName)`](#fn-metadatawithclustername)
  * [`fn withCreationTimestamp(creationTimestamp)`](#fn-metadatawithcreationtimestamp)
  * [`fn withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)`](#fn-metadatawithdeletiongraceperiodseconds)
  * [`fn withDeletionTimestamp(deletionTimestamp)`](#fn-metadatawithdeletiontimestamp)
  * [`fn withFinalizers(finalizers)`](#fn-metadatawithfinalizers)
  * [`fn withFinalizersMixin(finalizers)`](#fn-metadatawithfinalizersmixin)
  * [`fn withGenerateName(generateName)`](#fn-metadatawithgeneratename)
  * [`fn withGeneration(generation)`](#fn-metadatawithgeneration)
  * [`fn withLabels(labels)`](#fn-metadatawithlabels)
  * [`fn withLabelsMixin(labels)`](#fn-metadatawithlabelsmixin)
  * [`fn withName(name)`](#fn-metadatawithname)
  * [`fn withNamespace(namespace)`](#fn-metadatawithnamespace)
  * [`fn withOwnerReferences(ownerReferences)`](#fn-metadatawithownerreferences)
  * [`fn withOwnerReferencesMixin(ownerReferences)`](#fn-metadatawithownerreferencesmixin)
  * [`fn withResourceVersion(resourceVersion)`](#fn-metadatawithresourceversion)
  * [`fn withSelfLink(selfLink)`](#fn-metadatawithselflink)
  * [`fn withUid(uid)`](#fn-metadatawithuid)
* [`obj spec`](#obj-spec)
  * [`fn withDeletionPolicy(deletionPolicy)`](#fn-specwithdeletionpolicy)
  * [`fn withManagementPolicies(managementPolicies)`](#fn-specwithmanagementpolicies)
  * [`fn withManagementPoliciesMixin(managementPolicies)`](#fn-specwithmanagementpoliciesmixin)
  * [`obj spec.forProvider`](#obj-specforprovider)
    * [`fn withBucket(bucket)`](#fn-specforproviderwithbucket)
    * [`fn withEventbridge(eventbridge)`](#fn-specforproviderwitheventbridge)
    * [`fn withLambdaFunction(lambdaFunction)`](#fn-specforproviderwithlambdafunction)
    * [`fn withLambdaFunctionMixin(lambdaFunction)`](#fn-specforproviderwithlambdafunctionmixin)
    * [`fn withQueue(queue)`](#fn-specforproviderwithqueue)
    * [`fn withQueueMixin(queue)`](#fn-specforproviderwithqueuemixin)
    * [`fn withRegion(region)`](#fn-specforproviderwithregion)
    * [`fn withTopic(topic)`](#fn-specforproviderwithtopic)
    * [`fn withTopicMixin(topic)`](#fn-specforproviderwithtopicmixin)
    * [`obj spec.forProvider.bucketRef`](#obj-specforproviderbucketref)
      * [`fn withName(name)`](#fn-specforproviderbucketrefwithname)
      * [`obj spec.forProvider.bucketRef.policy`](#obj-specforproviderbucketrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderbucketrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderbucketrefpolicywithresolve)
    * [`obj spec.forProvider.bucketSelector`](#obj-specforproviderbucketselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderbucketselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderbucketselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderbucketselectorwithmatchlabelsmixin)
      * [`obj spec.forProvider.bucketSelector.policy`](#obj-specforproviderbucketselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specforproviderbucketselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specforproviderbucketselectorpolicywithresolve)
    * [`obj spec.forProvider.lambdaFunction`](#obj-specforproviderlambdafunction)
      * [`fn withEvents(events)`](#fn-specforproviderlambdafunctionwithevents)
      * [`fn withEventsMixin(events)`](#fn-specforproviderlambdafunctionwitheventsmixin)
      * [`fn withFilterPrefix(filterPrefix)`](#fn-specforproviderlambdafunctionwithfilterprefix)
      * [`fn withFilterSuffix(filterSuffix)`](#fn-specforproviderlambdafunctionwithfiltersuffix)
      * [`fn withId(id)`](#fn-specforproviderlambdafunctionwithid)
      * [`fn withLambdaFunctionArn(lambdaFunctionArn)`](#fn-specforproviderlambdafunctionwithlambdafunctionarn)
    * [`obj spec.forProvider.queue`](#obj-specforproviderqueue)
      * [`fn withEvents(events)`](#fn-specforproviderqueuewithevents)
      * [`fn withEventsMixin(events)`](#fn-specforproviderqueuewitheventsmixin)
      * [`fn withFilterPrefix(filterPrefix)`](#fn-specforproviderqueuewithfilterprefix)
      * [`fn withFilterSuffix(filterSuffix)`](#fn-specforproviderqueuewithfiltersuffix)
      * [`fn withId(id)`](#fn-specforproviderqueuewithid)
      * [`fn withQueueArn(queueArn)`](#fn-specforproviderqueuewithqueuearn)
      * [`obj spec.forProvider.queue.queueArnRef`](#obj-specforproviderqueuequeuearnref)
        * [`fn withName(name)`](#fn-specforproviderqueuequeuearnrefwithname)
        * [`obj spec.forProvider.queue.queueArnRef.policy`](#obj-specforproviderqueuequeuearnrefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderqueuequeuearnrefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderqueuequeuearnrefpolicywithresolve)
      * [`obj spec.forProvider.queue.queueArnSelector`](#obj-specforproviderqueuequeuearnselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforproviderqueuequeuearnselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforproviderqueuequeuearnselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforproviderqueuequeuearnselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.queue.queueArnSelector.policy`](#obj-specforproviderqueuequeuearnselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforproviderqueuequeuearnselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforproviderqueuequeuearnselectorpolicywithresolve)
    * [`obj spec.forProvider.topic`](#obj-specforprovidertopic)
      * [`fn withEvents(events)`](#fn-specforprovidertopicwithevents)
      * [`fn withEventsMixin(events)`](#fn-specforprovidertopicwitheventsmixin)
      * [`fn withFilterPrefix(filterPrefix)`](#fn-specforprovidertopicwithfilterprefix)
      * [`fn withFilterSuffix(filterSuffix)`](#fn-specforprovidertopicwithfiltersuffix)
      * [`fn withId(id)`](#fn-specforprovidertopicwithid)
      * [`fn withTopicArn(topicArn)`](#fn-specforprovidertopicwithtopicarn)
      * [`obj spec.forProvider.topic.topicArnRef`](#obj-specforprovidertopictopicarnref)
        * [`fn withName(name)`](#fn-specforprovidertopictopicarnrefwithname)
        * [`obj spec.forProvider.topic.topicArnRef.policy`](#obj-specforprovidertopictopicarnrefpolicy)
          * [`fn withResolution(resolution)`](#fn-specforprovidertopictopicarnrefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforprovidertopictopicarnrefpolicywithresolve)
      * [`obj spec.forProvider.topic.topicArnSelector`](#obj-specforprovidertopictopicarnselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specforprovidertopictopicarnselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specforprovidertopictopicarnselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specforprovidertopictopicarnselectorwithmatchlabelsmixin)
        * [`obj spec.forProvider.topic.topicArnSelector.policy`](#obj-specforprovidertopictopicarnselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specforprovidertopictopicarnselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specforprovidertopictopicarnselectorpolicywithresolve)
  * [`obj spec.initProvider`](#obj-specinitprovider)
    * [`fn withBucket(bucket)`](#fn-specinitproviderwithbucket)
    * [`fn withEventbridge(eventbridge)`](#fn-specinitproviderwitheventbridge)
    * [`fn withLambdaFunction(lambdaFunction)`](#fn-specinitproviderwithlambdafunction)
    * [`fn withLambdaFunctionMixin(lambdaFunction)`](#fn-specinitproviderwithlambdafunctionmixin)
    * [`fn withQueue(queue)`](#fn-specinitproviderwithqueue)
    * [`fn withQueueMixin(queue)`](#fn-specinitproviderwithqueuemixin)
    * [`fn withTopic(topic)`](#fn-specinitproviderwithtopic)
    * [`fn withTopicMixin(topic)`](#fn-specinitproviderwithtopicmixin)
    * [`obj spec.initProvider.bucketRef`](#obj-specinitproviderbucketref)
      * [`fn withName(name)`](#fn-specinitproviderbucketrefwithname)
      * [`obj spec.initProvider.bucketRef.policy`](#obj-specinitproviderbucketrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderbucketrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderbucketrefpolicywithresolve)
    * [`obj spec.initProvider.bucketSelector`](#obj-specinitproviderbucketselector)
      * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderbucketselectorwithmatchcontrollerref)
      * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderbucketselectorwithmatchlabels)
      * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderbucketselectorwithmatchlabelsmixin)
      * [`obj spec.initProvider.bucketSelector.policy`](#obj-specinitproviderbucketselectorpolicy)
        * [`fn withResolution(resolution)`](#fn-specinitproviderbucketselectorpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specinitproviderbucketselectorpolicywithresolve)
    * [`obj spec.initProvider.lambdaFunction`](#obj-specinitproviderlambdafunction)
      * [`fn withEvents(events)`](#fn-specinitproviderlambdafunctionwithevents)
      * [`fn withEventsMixin(events)`](#fn-specinitproviderlambdafunctionwitheventsmixin)
      * [`fn withFilterPrefix(filterPrefix)`](#fn-specinitproviderlambdafunctionwithfilterprefix)
      * [`fn withFilterSuffix(filterSuffix)`](#fn-specinitproviderlambdafunctionwithfiltersuffix)
      * [`fn withId(id)`](#fn-specinitproviderlambdafunctionwithid)
      * [`fn withLambdaFunctionArn(lambdaFunctionArn)`](#fn-specinitproviderlambdafunctionwithlambdafunctionarn)
    * [`obj spec.initProvider.queue`](#obj-specinitproviderqueue)
      * [`fn withEvents(events)`](#fn-specinitproviderqueuewithevents)
      * [`fn withEventsMixin(events)`](#fn-specinitproviderqueuewitheventsmixin)
      * [`fn withFilterPrefix(filterPrefix)`](#fn-specinitproviderqueuewithfilterprefix)
      * [`fn withFilterSuffix(filterSuffix)`](#fn-specinitproviderqueuewithfiltersuffix)
      * [`fn withId(id)`](#fn-specinitproviderqueuewithid)
      * [`fn withQueueArn(queueArn)`](#fn-specinitproviderqueuewithqueuearn)
      * [`obj spec.initProvider.queue.queueArnRef`](#obj-specinitproviderqueuequeuearnref)
        * [`fn withName(name)`](#fn-specinitproviderqueuequeuearnrefwithname)
        * [`obj spec.initProvider.queue.queueArnRef.policy`](#obj-specinitproviderqueuequeuearnrefpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitproviderqueuequeuearnrefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitproviderqueuequeuearnrefpolicywithresolve)
      * [`obj spec.initProvider.queue.queueArnSelector`](#obj-specinitproviderqueuequeuearnselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitproviderqueuequeuearnselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specinitproviderqueuequeuearnselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitproviderqueuequeuearnselectorwithmatchlabelsmixin)
        * [`obj spec.initProvider.queue.queueArnSelector.policy`](#obj-specinitproviderqueuequeuearnselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitproviderqueuequeuearnselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitproviderqueuequeuearnselectorpolicywithresolve)
    * [`obj spec.initProvider.topic`](#obj-specinitprovidertopic)
      * [`fn withEvents(events)`](#fn-specinitprovidertopicwithevents)
      * [`fn withEventsMixin(events)`](#fn-specinitprovidertopicwitheventsmixin)
      * [`fn withFilterPrefix(filterPrefix)`](#fn-specinitprovidertopicwithfilterprefix)
      * [`fn withFilterSuffix(filterSuffix)`](#fn-specinitprovidertopicwithfiltersuffix)
      * [`fn withId(id)`](#fn-specinitprovidertopicwithid)
      * [`fn withTopicArn(topicArn)`](#fn-specinitprovidertopicwithtopicarn)
      * [`obj spec.initProvider.topic.topicArnRef`](#obj-specinitprovidertopictopicarnref)
        * [`fn withName(name)`](#fn-specinitprovidertopictopicarnrefwithname)
        * [`obj spec.initProvider.topic.topicArnRef.policy`](#obj-specinitprovidertopictopicarnrefpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitprovidertopictopicarnrefpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitprovidertopictopicarnrefpolicywithresolve)
      * [`obj spec.initProvider.topic.topicArnSelector`](#obj-specinitprovidertopictopicarnselector)
        * [`fn withMatchControllerRef(matchControllerRef)`](#fn-specinitprovidertopictopicarnselectorwithmatchcontrollerref)
        * [`fn withMatchLabels(matchLabels)`](#fn-specinitprovidertopictopicarnselectorwithmatchlabels)
        * [`fn withMatchLabelsMixin(matchLabels)`](#fn-specinitprovidertopictopicarnselectorwithmatchlabelsmixin)
        * [`obj spec.initProvider.topic.topicArnSelector.policy`](#obj-specinitprovidertopictopicarnselectorpolicy)
          * [`fn withResolution(resolution)`](#fn-specinitprovidertopictopicarnselectorpolicywithresolution)
          * [`fn withResolve(resolve)`](#fn-specinitprovidertopictopicarnselectorpolicywithresolve)
  * [`obj spec.providerConfigRef`](#obj-specproviderconfigref)
    * [`fn withName(name)`](#fn-specproviderconfigrefwithname)
    * [`obj spec.providerConfigRef.policy`](#obj-specproviderconfigrefpolicy)
      * [`fn withResolution(resolution)`](#fn-specproviderconfigrefpolicywithresolution)
      * [`fn withResolve(resolve)`](#fn-specproviderconfigrefpolicywithresolve)
  * [`obj spec.publishConnectionDetailsTo`](#obj-specpublishconnectiondetailsto)
    * [`fn withName(name)`](#fn-specpublishconnectiondetailstowithname)
    * [`obj spec.publishConnectionDetailsTo.configRef`](#obj-specpublishconnectiondetailstoconfigref)
      * [`fn withName(name)`](#fn-specpublishconnectiondetailstoconfigrefwithname)
      * [`obj spec.publishConnectionDetailsTo.configRef.policy`](#obj-specpublishconnectiondetailstoconfigrefpolicy)
        * [`fn withResolution(resolution)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolution)
        * [`fn withResolve(resolve)`](#fn-specpublishconnectiondetailstoconfigrefpolicywithresolve)
    * [`obj spec.publishConnectionDetailsTo.metadata`](#obj-specpublishconnectiondetailstometadata)
      * [`fn withAnnotations(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotations)
      * [`fn withAnnotationsMixin(annotations)`](#fn-specpublishconnectiondetailstometadatawithannotationsmixin)
      * [`fn withLabels(labels)`](#fn-specpublishconnectiondetailstometadatawithlabels)
      * [`fn withLabelsMixin(labels)`](#fn-specpublishconnectiondetailstometadatawithlabelsmixin)
      * [`fn withType(type)`](#fn-specpublishconnectiondetailstometadatawithtype)
  * [`obj spec.writeConnectionSecretToRef`](#obj-specwriteconnectionsecrettoref)
    * [`fn withName(name)`](#fn-specwriteconnectionsecrettorefwithname)
    * [`fn withNamespace(namespace)`](#fn-specwriteconnectionsecrettorefwithnamespace)

## Fields

### fn new

```ts
new(name)
```

new returns an instance of BucketNotification

## obj metadata

"ObjectMeta is metadata that all persisted resources must have, which includes all objects users must create."

### fn metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

### fn metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations is an unstructured key value map stored with a resource that may be set by external tools to store and retrieve arbitrary metadata. They are not queryable and should be preserved when modifying objects. More info: http://kubernetes.io/docs/user-guide/annotations"

**Note:** This function appends passed data to existing values

### fn metadata.withClusterName

```ts
withClusterName(clusterName)
```

"The name of the cluster which the object belongs to. This is used to distinguish resources with same name and namespace in different clusters. This field is not set anywhere right now and apiserver is going to ignore it if set in create or update request."

### fn metadata.withCreationTimestamp

```ts
withCreationTimestamp(creationTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withDeletionGracePeriodSeconds

```ts
withDeletionGracePeriodSeconds(deletionGracePeriodSeconds)
```

"Number of seconds allowed for this object to gracefully terminate before it will be removed from the system. Only set when deletionTimestamp is also set. May only be shortened. Read-only."

### fn metadata.withDeletionTimestamp

```ts
withDeletionTimestamp(deletionTimestamp)
```

"Time is a wrapper around time.Time which supports correct marshaling to YAML and JSON.  Wrappers are provided for many of the factory methods that the time package offers."

### fn metadata.withFinalizers

```ts
withFinalizers(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

### fn metadata.withFinalizersMixin

```ts
withFinalizersMixin(finalizers)
```

"Must be empty before the object is deleted from the registry. Each entry is an identifier for the responsible component that will remove the entry from the list. If the deletionTimestamp of the object is non-nil, entries in this list can only be removed. Finalizers may be processed and removed in any order.  Order is NOT enforced because it introduces significant risk of stuck finalizers. finalizers is a shared field, any actor with permission can reorder it. If the finalizer list is processed in order, then this can lead to a situation in which the component responsible for the first finalizer in the list is waiting for a signal (field value, external system, or other) produced by a component responsible for a finalizer later in the list, resulting in a deadlock. Without enforced ordering finalizers are free to order amongst themselves and are not vulnerable to ordering changes in the list."

**Note:** This function appends passed data to existing values

### fn metadata.withGenerateName

```ts
withGenerateName(generateName)
```

"GenerateName is an optional prefix, used by the server, to generate a unique name ONLY IF the Name field has not been provided. If this field is used, the name returned to the client will be different than the name passed. This value will also be combined with a unique suffix. The provided value has the same validation rules as the Name field, and may be truncated by the length of the suffix required to make the value unique on the server.\n\nIf this field is specified and the generated name exists, the server will NOT return a 409 - instead, it will either return 201 Created or 500 with Reason ServerTimeout indicating a unique name could not be found in the time allotted, and the client should retry (optionally after the time indicated in the Retry-After header).\n\nApplied only if Name is not specified. More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#idempotency"

### fn metadata.withGeneration

```ts
withGeneration(generation)
```

"A sequence number representing a specific generation of the desired state. Populated by the system. Read-only."

### fn metadata.withLabels

```ts
withLabels(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

### fn metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Map of string keys and values that can be used to organize and categorize (scope and select) objects. May match selectors of replication controllers and services. More info: http://kubernetes.io/docs/user-guide/labels"

**Note:** This function appends passed data to existing values

### fn metadata.withName

```ts
withName(name)
```

"Name must be unique within a namespace. Is required when creating resources, although some resources may allow a client to request the generation of an appropriate name automatically. Name is primarily intended for creation idempotence and configuration definition. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/identifiers#names"

### fn metadata.withNamespace

```ts
withNamespace(namespace)
```

"Namespace defines the space within which each name must be unique. An empty namespace is equivalent to the \"default\" namespace, but \"default\" is the canonical representation. Not all objects are required to be scoped to a namespace - the value of this field for those objects will be empty.\n\nMust be a DNS_LABEL. Cannot be updated. More info: http://kubernetes.io/docs/user-guide/namespaces"

### fn metadata.withOwnerReferences

```ts
withOwnerReferences(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

### fn metadata.withOwnerReferencesMixin

```ts
withOwnerReferencesMixin(ownerReferences)
```

"List of objects depended by this object. If ALL objects in the list have been deleted, this object will be garbage collected. If this object is managed by a controller, then an entry in this list will point to this controller, with the controller field set to true. There cannot be more than one managing controller."

**Note:** This function appends passed data to existing values

### fn metadata.withResourceVersion

```ts
withResourceVersion(resourceVersion)
```

"An opaque value that represents the internal version of this object that can be used by clients to determine when objects have changed. May be used for optimistic concurrency, change detection, and the watch operation on a resource or set of resources. Clients must treat these values as opaque and passed unmodified back to the server. They may only be valid for a particular resource or set of resources.\n\nPopulated by the system. Read-only. Value must be treated as opaque by clients and . More info: https://git.k8s.io/community/contributors/devel/sig-architecture/api-conventions.md#concurrency-control-and-consistency"

### fn metadata.withSelfLink

```ts
withSelfLink(selfLink)
```

"SelfLink is a URL representing this object. Populated by the system. Read-only.\n\nDEPRECATED Kubernetes will stop propagating this field in 1.20 release and the field is planned to be removed in 1.21 release."

### fn metadata.withUid

```ts
withUid(uid)
```

"UID is the unique in time and space value for this object. It is typically generated by the server on successful creation of a resource and is not allowed to change on PUT operations.\n\nPopulated by the system. Read-only. More info: http://kubernetes.io/docs/user-guide/identifiers#uids"

## obj spec

"BucketNotificationSpec defines the desired state of BucketNotification"

### fn spec.withDeletionPolicy

```ts
withDeletionPolicy(deletionPolicy)
```

"DeletionPolicy specifies what will happen to the underlying external\nwhen this managed resource is deleted - either \"Delete\" or \"Orphan\" the\nexternal resource.\nThis field is planned to be deprecated in favor of the ManagementPolicies\nfield in a future release. Currently, both could be set independently and\nnon-default values would be honored if the feature flag is enabled.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223"

### fn spec.withManagementPolicies

```ts
withManagementPolicies(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

### fn spec.withManagementPoliciesMixin

```ts
withManagementPoliciesMixin(managementPolicies)
```

"THIS IS A BETA FIELD. It is on by default but can be opted out\nthrough a Crossplane feature flag.\nManagementPolicies specify the array of actions Crossplane is allowed to\ntake on the managed and external resources.\nThis field is planned to replace the DeletionPolicy field in a future\nrelease. Currently, both could be set independently and non-default\nvalues would be honored if the feature flag is enabled. If both are\ncustom, the DeletionPolicy field will be ignored.\nSee the design doc for more information: https://github.com/crossplane/crossplane/blob/499895a25d1a1a0ba1604944ef98ac7a1a71f197/design/design-doc-observe-only-resources.md?plain=1#L223\nand this one: https://github.com/crossplane/crossplane/blob/444267e84783136daa93568b364a5f01228cacbe/design/one-pager-ignore-changes.md"

**Note:** This function appends passed data to existing values

## obj spec.forProvider



### fn spec.forProvider.withBucket

```ts
withBucket(bucket)
```

"Name of the bucket for notification configuration."

### fn spec.forProvider.withEventbridge

```ts
withEventbridge(eventbridge)
```

"Whether to enable Amazon EventBridge notifications. Defaults to false."

### fn spec.forProvider.withLambdaFunction

```ts
withLambdaFunction(lambdaFunction)
```

"Used to configure notifications to a Lambda Function. See below."

### fn spec.forProvider.withLambdaFunctionMixin

```ts
withLambdaFunctionMixin(lambdaFunction)
```

"Used to configure notifications to a Lambda Function. See below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withQueue

```ts
withQueue(queue)
```

"Notification configuration to SQS Queue. See below."

### fn spec.forProvider.withQueueMixin

```ts
withQueueMixin(queue)
```

"Notification configuration to SQS Queue. See below."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.withRegion

```ts
withRegion(region)
```

"Region is the region you'd like your resource to be created in."

### fn spec.forProvider.withTopic

```ts
withTopic(topic)
```

"Notification configuration to SNS Topic. See below."

### fn spec.forProvider.withTopicMixin

```ts
withTopicMixin(topic)
```

"Notification configuration to SNS Topic. See below."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.bucketRef

"Reference to a Bucket in s3 to populate bucket."

### fn spec.forProvider.bucketRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.bucketRef.policy

"Policies for referencing."

### fn spec.forProvider.bucketRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.bucketRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.bucketSelector

"Selector for a Bucket in s3 to populate bucket."

### fn spec.forProvider.bucketSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.bucketSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.bucketSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.bucketSelector.policy

"Policies for selection."

### fn spec.forProvider.bucketSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.bucketSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.lambdaFunction

"Used to configure notifications to a Lambda Function. See below."

### fn spec.forProvider.lambdaFunction.withEvents

```ts
withEvents(events)
```

"Event for which to send notifications."

### fn spec.forProvider.lambdaFunction.withEventsMixin

```ts
withEventsMixin(events)
```

"Event for which to send notifications."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.lambdaFunction.withFilterPrefix

```ts
withFilterPrefix(filterPrefix)
```

"Object key name prefix."

### fn spec.forProvider.lambdaFunction.withFilterSuffix

```ts
withFilterSuffix(filterSuffix)
```

"Object key name suffix."

### fn spec.forProvider.lambdaFunction.withId

```ts
withId(id)
```

"Unique identifier for each of the notification configurations."

### fn spec.forProvider.lambdaFunction.withLambdaFunctionArn

```ts
withLambdaFunctionArn(lambdaFunctionArn)
```

"Lambda function ARN."

## obj spec.forProvider.queue

"Notification configuration to SQS Queue. See below."

### fn spec.forProvider.queue.withEvents

```ts
withEvents(events)
```

"Specifies event for which to send notifications."

### fn spec.forProvider.queue.withEventsMixin

```ts
withEventsMixin(events)
```

"Specifies event for which to send notifications."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.queue.withFilterPrefix

```ts
withFilterPrefix(filterPrefix)
```

"Object key name prefix."

### fn spec.forProvider.queue.withFilterSuffix

```ts
withFilterSuffix(filterSuffix)
```

"Object key name suffix."

### fn spec.forProvider.queue.withId

```ts
withId(id)
```

"Unique identifier for each of the notification configurations."

### fn spec.forProvider.queue.withQueueArn

```ts
withQueueArn(queueArn)
```

"SQS queue ARN."

## obj spec.forProvider.queue.queueArnRef

"Reference to a Queue in sqs to populate queueArn."

### fn spec.forProvider.queue.queueArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.queue.queueArnRef.policy

"Policies for referencing."

### fn spec.forProvider.queue.queueArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.queue.queueArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.queue.queueArnSelector

"Selector for a Queue in sqs to populate queueArn."

### fn spec.forProvider.queue.queueArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.queue.queueArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.queue.queueArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.queue.queueArnSelector.policy

"Policies for selection."

### fn spec.forProvider.queue.queueArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.queue.queueArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.topic

"Notification configuration to SNS Topic. See below."

### fn spec.forProvider.topic.withEvents

```ts
withEvents(events)
```

"Event for which to send notifications."

### fn spec.forProvider.topic.withEventsMixin

```ts
withEventsMixin(events)
```

"Event for which to send notifications."

**Note:** This function appends passed data to existing values

### fn spec.forProvider.topic.withFilterPrefix

```ts
withFilterPrefix(filterPrefix)
```

"Object key name prefix."

### fn spec.forProvider.topic.withFilterSuffix

```ts
withFilterSuffix(filterSuffix)
```

"Object key name suffix."

### fn spec.forProvider.topic.withId

```ts
withId(id)
```

"Unique identifier for each of the notification configurations."

### fn spec.forProvider.topic.withTopicArn

```ts
withTopicArn(topicArn)
```

"SNS topic ARN."

## obj spec.forProvider.topic.topicArnRef

"Reference to a Topic in sns to populate topicArn."

### fn spec.forProvider.topic.topicArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.forProvider.topic.topicArnRef.policy

"Policies for referencing."

### fn spec.forProvider.topic.topicArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.topic.topicArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.forProvider.topic.topicArnSelector

"Selector for a Topic in sns to populate topicArn."

### fn spec.forProvider.topic.topicArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.forProvider.topic.topicArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.forProvider.topic.topicArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.forProvider.topic.topicArnSelector.policy

"Policies for selection."

### fn spec.forProvider.topic.topicArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.forProvider.topic.topicArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider

"THIS IS A BETA FIELD. It will be honored\nunless the Management Policies feature flag is disabled.\nInitProvider holds the same fields as ForProvider, with the exception\nof Identifier and other resource reference fields. The fields that are\nin InitProvider are merged into ForProvider when the resource is created.\nThe same fields are also added to the terraform ignore_changes hook, to\navoid updating them after creation. This is useful for fields that are\nrequired on creation, but we do not desire to update them after creation,\nfor example because of an external controller is managing them, like an\nautoscaler."

### fn spec.initProvider.withBucket

```ts
withBucket(bucket)
```

"Name of the bucket for notification configuration."

### fn spec.initProvider.withEventbridge

```ts
withEventbridge(eventbridge)
```

"Whether to enable Amazon EventBridge notifications. Defaults to false."

### fn spec.initProvider.withLambdaFunction

```ts
withLambdaFunction(lambdaFunction)
```

"Used to configure notifications to a Lambda Function. See below."

### fn spec.initProvider.withLambdaFunctionMixin

```ts
withLambdaFunctionMixin(lambdaFunction)
```

"Used to configure notifications to a Lambda Function. See below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withQueue

```ts
withQueue(queue)
```

"Notification configuration to SQS Queue. See below."

### fn spec.initProvider.withQueueMixin

```ts
withQueueMixin(queue)
```

"Notification configuration to SQS Queue. See below."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.withTopic

```ts
withTopic(topic)
```

"Notification configuration to SNS Topic. See below."

### fn spec.initProvider.withTopicMixin

```ts
withTopicMixin(topic)
```

"Notification configuration to SNS Topic. See below."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.bucketRef

"Reference to a Bucket in s3 to populate bucket."

### fn spec.initProvider.bucketRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.bucketRef.policy

"Policies for referencing."

### fn spec.initProvider.bucketRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.bucketRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.bucketSelector

"Selector for a Bucket in s3 to populate bucket."

### fn spec.initProvider.bucketSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.bucketSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.bucketSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.bucketSelector.policy

"Policies for selection."

### fn spec.initProvider.bucketSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.bucketSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.lambdaFunction

"Used to configure notifications to a Lambda Function. See below."

### fn spec.initProvider.lambdaFunction.withEvents

```ts
withEvents(events)
```

"Event for which to send notifications."

### fn spec.initProvider.lambdaFunction.withEventsMixin

```ts
withEventsMixin(events)
```

"Event for which to send notifications."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.lambdaFunction.withFilterPrefix

```ts
withFilterPrefix(filterPrefix)
```

"Object key name prefix."

### fn spec.initProvider.lambdaFunction.withFilterSuffix

```ts
withFilterSuffix(filterSuffix)
```

"Object key name suffix."

### fn spec.initProvider.lambdaFunction.withId

```ts
withId(id)
```

"Unique identifier for each of the notification configurations."

### fn spec.initProvider.lambdaFunction.withLambdaFunctionArn

```ts
withLambdaFunctionArn(lambdaFunctionArn)
```

"Lambda function ARN."

## obj spec.initProvider.queue

"Notification configuration to SQS Queue. See below."

### fn spec.initProvider.queue.withEvents

```ts
withEvents(events)
```

"Specifies event for which to send notifications."

### fn spec.initProvider.queue.withEventsMixin

```ts
withEventsMixin(events)
```

"Specifies event for which to send notifications."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.queue.withFilterPrefix

```ts
withFilterPrefix(filterPrefix)
```

"Object key name prefix."

### fn spec.initProvider.queue.withFilterSuffix

```ts
withFilterSuffix(filterSuffix)
```

"Object key name suffix."

### fn spec.initProvider.queue.withId

```ts
withId(id)
```

"Unique identifier for each of the notification configurations."

### fn spec.initProvider.queue.withQueueArn

```ts
withQueueArn(queueArn)
```

"SQS queue ARN."

## obj spec.initProvider.queue.queueArnRef

"Reference to a Queue in sqs to populate queueArn."

### fn spec.initProvider.queue.queueArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.queue.queueArnRef.policy

"Policies for referencing."

### fn spec.initProvider.queue.queueArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.queue.queueArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.queue.queueArnSelector

"Selector for a Queue in sqs to populate queueArn."

### fn spec.initProvider.queue.queueArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.queue.queueArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.queue.queueArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.queue.queueArnSelector.policy

"Policies for selection."

### fn spec.initProvider.queue.queueArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.queue.queueArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.topic

"Notification configuration to SNS Topic. See below."

### fn spec.initProvider.topic.withEvents

```ts
withEvents(events)
```

"Event for which to send notifications."

### fn spec.initProvider.topic.withEventsMixin

```ts
withEventsMixin(events)
```

"Event for which to send notifications."

**Note:** This function appends passed data to existing values

### fn spec.initProvider.topic.withFilterPrefix

```ts
withFilterPrefix(filterPrefix)
```

"Object key name prefix."

### fn spec.initProvider.topic.withFilterSuffix

```ts
withFilterSuffix(filterSuffix)
```

"Object key name suffix."

### fn spec.initProvider.topic.withId

```ts
withId(id)
```

"Unique identifier for each of the notification configurations."

### fn spec.initProvider.topic.withTopicArn

```ts
withTopicArn(topicArn)
```

"SNS topic ARN."

## obj spec.initProvider.topic.topicArnRef

"Reference to a Topic in sns to populate topicArn."

### fn spec.initProvider.topic.topicArnRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.initProvider.topic.topicArnRef.policy

"Policies for referencing."

### fn spec.initProvider.topic.topicArnRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.topic.topicArnRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.initProvider.topic.topicArnSelector

"Selector for a Topic in sns to populate topicArn."

### fn spec.initProvider.topic.topicArnSelector.withMatchControllerRef

```ts
withMatchControllerRef(matchControllerRef)
```

"MatchControllerRef ensures an object with the same controller reference\nas the selecting object is selected."

### fn spec.initProvider.topic.topicArnSelector.withMatchLabels

```ts
withMatchLabels(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

### fn spec.initProvider.topic.topicArnSelector.withMatchLabelsMixin

```ts
withMatchLabelsMixin(matchLabels)
```

"MatchLabels ensures an object with matching labels is selected."

**Note:** This function appends passed data to existing values

## obj spec.initProvider.topic.topicArnSelector.policy

"Policies for selection."

### fn spec.initProvider.topic.topicArnSelector.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.initProvider.topic.topicArnSelector.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.providerConfigRef

"ProviderConfigReference specifies how the provider that will be used to\ncreate, observe, update, and delete this managed resource should be\nconfigured."

### fn spec.providerConfigRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.providerConfigRef.policy

"Policies for referencing."

### fn spec.providerConfigRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.providerConfigRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo

"PublishConnectionDetailsTo specifies the connection secret config which\ncontains a name, metadata and a reference to secret store config to\nwhich any connection details for this managed resource should be written.\nConnection details frequently include the endpoint, username,\nand password required to connect to the managed resource."

### fn spec.publishConnectionDetailsTo.withName

```ts
withName(name)
```

"Name is the name of the connection secret."

## obj spec.publishConnectionDetailsTo.configRef

"SecretStoreConfigRef specifies which secret store config should be used\nfor this ConnectionSecret."

### fn spec.publishConnectionDetailsTo.configRef.withName

```ts
withName(name)
```

"Name of the referenced object."

## obj spec.publishConnectionDetailsTo.configRef.policy

"Policies for referencing."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolution

```ts
withResolution(resolution)
```

"Resolution specifies whether resolution of this reference is required.\nThe default is 'Required', which means the reconcile will fail if the\nreference cannot be resolved. 'Optional' means this reference will be\na no-op if it cannot be resolved."

### fn spec.publishConnectionDetailsTo.configRef.policy.withResolve

```ts
withResolve(resolve)
```

"Resolve specifies when this reference should be resolved. The default\nis 'IfNotPresent', which will attempt to resolve the reference only when\nthe corresponding field is not present. Use 'Always' to resolve the\nreference on every reconcile."

## obj spec.publishConnectionDetailsTo.metadata

"Metadata is the metadata for connection secret."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotations

```ts
withAnnotations(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withAnnotationsMixin

```ts
withAnnotationsMixin(annotations)
```

"Annotations are the annotations to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.annotations\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withLabels

```ts
withLabels(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

### fn spec.publishConnectionDetailsTo.metadata.withLabelsMixin

```ts
withLabelsMixin(labels)
```

"Labels are the labels/tags to be added to connection secret.\n- For Kubernetes secrets, this will be used as \"metadata.labels\".\n- It is up to Secret Store implementation for others store types."

**Note:** This function appends passed data to existing values

### fn spec.publishConnectionDetailsTo.metadata.withType

```ts
withType(type)
```

"Type is the SecretType for the connection secret.\n- Only valid for Kubernetes Secret Stores."

## obj spec.writeConnectionSecretToRef

"WriteConnectionSecretToReference specifies the namespace and name of a\nSecret to which any connection details for this managed resource should\nbe written. Connection details frequently include the endpoint, username,\nand password required to connect to the managed resource.\nThis field is planned to be replaced in a future release in favor of\nPublishConnectionDetailsTo. Currently, both could be set independently\nand connection details would be published to both without affecting\neach other."

### fn spec.writeConnectionSecretToRef.withName

```ts
withName(name)
```

"Name of the secret."

### fn spec.writeConnectionSecretToRef.withNamespace

```ts
withNamespace(namespace)
```

"Namespace of the secret."